@@ -15,6 +15,7 @@ EBUILD gitlab-gitaly-0.3.0.ebuild 769 SHA256 1d57371bbc733d91a09d10fce9dc9a65f2e
 EBUILD gitlab-gitaly-0.35.0-r2.ebuild 1143 SHA256 f27758444fefb15b9ea55cc9be68e8b47fdf5c6794b9ed32cadc95690b2dfd62 SHA512 5b7117c6a5c91e0168c495a18c08c815ae423dcebce644264d9161692ede29469c6585acfde682b0d60ccab6efa601a0259d2b44ceb5cc15a26096a2bfc318a8 WHIRLPOOL 8911c39960635981e0baa62cdf3425acc9f7167df940f4c43c52dbe020b208ad3192a01bf5f198ae0777cf5af27cc8e643455b30c1e0be3326a56aab1c3c8e10
 EBUILD gitlab-gitaly-0.38.0-r1.ebuild 1035 SHA256 c667625968e0cb0530679184353724687bc193c0a8166fea0d9f8a516ce6db40 SHA512 e585a18c64a2e8aca2796c45066e1b1113cba9320a47f9af638fce171ac362060edac4216e7259628433e5b5facaebbf876bf807dd99f80ebd8c88e7cb726992 WHIRLPOOL 7f329f60fce603e61ebf90cc2aa0182d58574d449f096f3cf59c4751f1db9d5eb856d1fa0ee67c565d392261e45c784e25a3b4014f9a44857c31ca04af8cb70f
 EBUILD gitlab-gitaly-0.43.1.ebuild 1073 SHA256 594e68b869e53fe6fbdcf8fdade3889f55883b8b4ab17a2b064b3fd12a1ef739 SHA512 e3e7f045aa0565267bb516f685685c704841b5186dcca1282274ddd9392b734ac7808cb99d587ced3c87a357dc5af02bca99056386f0db0f9ecd07bba9e6e18e WHIRLPOOL 1329e9b461fe5c7386aa127a815602c655f8411a030537de9a247ea033723cfd60eb00a38e39cb775c985607b90b0e30fe55a9ef6856b49204a2ddc8427afa1c
+EBUILD gitlab-gitaly-0.52.1.ebuild 1073 SHA256 594e68b869e53fe6fbdcf8fdade3889f55883b8b4ab17a2b064b3fd12a1ef739 SHA512 e3e7f045aa0565267bb516f685685c704841b5186dcca1282274ddd9392b734ac7808cb99d587ced3c87a357dc5af02bca99056386f0db0f9ecd07bba9e6e18e WHIRLPOOL 1329e9b461fe5c7386aa127a815602c655f8411a030537de9a247ea033723cfd60eb00a38e39cb775c985607b90b0e30fe55a9ef6856b49204a2ddc8427afa1c
 EBUILD gitlab-gitaly-0.6.0.ebuild 769 SHA256 601ca500d12250325bf6f924d53b28cb120cc75da9b9e1d83cd4c9317aa1ee91 SHA512 1263c919fb3c126a0ba5dda2b9da45b0a16b6bb703ec4260b11b40463fcfedd1249389272ab638d25ced351a63c0812c0cbc7ea035f9c2250d2eb79786424c2d WHIRLPOOL 261dfdd551dad839d687b2092027de33e95142e1ed7336fd6513742044ff219353743988aefad8e5da6850a8e1c8d5b44baf08c6702960a829673cfc5580e152
-MISC ChangeLog 4592 SHA256 0461cf1498468ab7c34070b943f10082a7dfad11c6a13ebfde4b5a4cefa294fa SHA512 784f683feaf9544e8135f50c5c39cdb7e5d9237e2bd34ff61823f5590b69c7a69f5b24c2155d35db98f9920f0e21cf8839ea7e75dd0af6cf3b7d057df2d889fc WHIRLPOOL e8fc68363080f0429dbd9503dc19c9bffe1ff7b62fcd1d9fbf65c2bcce8092714106b50ea6dbfc5c88b223387f90fb665256035efc10cd47a3f8a986b6c3466b
+MISC ChangeLog 4772 SHA256 b9da1dd32bc93b63482d0942a3aad179c47540793e31026f00c7b9c8c209c69b SHA512 c536758090c57f0c63bda2fcf282cc0548486adab02bcb4d638b63192a8a705c31723bf9c8764616b8a2c5ea508a58a687790144739951f336f0db086e2f1c61 WHIRLPOOL 4363a5a5625dbcec90b975d362cb55528e470b8393e47216c59931458fa376ee307103e3bbb84163ce48aabaceb3d95179aa3a7c230f010631369c3e4bee0815
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
